--- a/refs-RW.bib
+++ b/refs-RW.bib
@@ -35,3 +35,115 @@
     title = {On the Speed of Random Walks on Graphs},
     year = {1999}
 }
+
+@article{Ajelli2010,
+abstract = {BACKGROUND: In recent years large-scale computational models for the realistic simulation of epidemic outbreaks have been used with increased frequency. Methodologies adapt to the scale of interest and range from very detailed agent-based models to spatially-structured metapopulation models. One major issue thus concerns to what extent the geotemporal spreading pattern found by different modeling approaches may differ and depend on the different approximations and assumptions used.$\backslash$n$\backslash$nMETHODS: We provide for the first time a side-by-side comparison of the results obtained with a stochastic agent-based model and a structured metapopulation stochastic model for the progression of a baseline pandemic event in Italy, a large and geographically heterogeneous European country. The agent-based model is based on the explicit representation of the Italian population through highly detailed data on the socio-demographic structure. The metapopulation simulations use the GLobal Epidemic and Mobility (GLEaM) model, based on high-resolution census data worldwide, and integrating airline travel flow data with short-range human mobility patterns at the global scale. The model also considers age structure data for Italy. GLEaM and the agent-based models are synchronized in their initial conditions by using the same disease parameterization, and by defining the same importation of infected cases from international travels.$\backslash$n$\backslash$nRESULTS: The results obtained show that both models provide epidemic patterns that are in very good agreement at the granularity levels accessible by both approaches, with differences in peak timing on the order of a few days. The relative difference of the epidemic size depends on the basic reproductive ratio, R0, and on the fact that the metapopulation model consistently yields a larger incidence than the agent-based model, as expected due to the differences in the structure in the intra-population contact pattern of the approaches. The age breakdown analysis shows that similar attack rates are obtained for the younger age classes.$\backslash$n$\backslash$nCONCLUSIONS: The good agreement between the two modeling approaches is very important for defining the tradeoff between data availability and the information provided by the models. The results we present define the possibility of hybrid models combining the agent-based and the metapopulation approaches according to the available data and computational resources.},
+author = {Ajelli, Marco and Gon{\c{c}}alves, Bruno and Balcan, Duygu and Colizza, Vittoria and Hu, Hao and Ramasco, Jos{\'{e}} J. and Merler, Stefano and Vespignani, Alessandro},
+doi = {10.1186/1471-2334-10-190},
+isbn = {1471-2334 (Electronic)$\backslash$r1471-2334 (Linking)},
+issn = {14712334},
+journal = {BMC Infectious Diseases},
+pmid = {20587041},
+title = {{Comparing large-scale computational approaches to epidemic modeling: Agent-based versus structured metapopulation models}},
+year = {2010}
+}
+@article{Balcan2010,
+abstract = {Here we present the Global Epidemic and Mobility (GLEaM) model that integrates sociodemographic and population mobility data in a spatially structured stochastic disease approach to simulate the spread of epidemics at the worldwide scale. We discuss the flexible structure of the model that is open to the inclusion of different disease structures and local intervention policies. This makes GLEaM suitable for the computational modeling and anticipation of the spatio-temporal patterns of global epidemic spreading, the understanding of historical epidemics, the assessment of the role of human mobility in shaping global epidemics, and the analysis of mitigation and containment scenarios. {\textcopyright} 2010 Elsevier B.V.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Balcan, Duygu and Gon{\c{c}}alves, Bruno and Hu, Hao and Ramasco, Jos{\'{e}} J. and Colizza, Vittoria and Vespignani, Alessandro},
+doi = {10.1016/j.jocs.2010.07.002},
+eprint = {NIHMS150003},
+file = {:C$\backslash$:/Users/Trent/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Balcan et al. - 2010 - Modeling the spatial spread of infectious diseases The global epidemic and mobility computational model.pdf:pdf},
+isbn = {1877-7503},
+issn = {18777503},
+journal = {Journal of Computational Science},
+keywords = {Complex networks,Computational epidemiology,Human mobility,Infectious diseases,Multiscale phenomena},
+pmid = {21415939},
+title = {{Modeling the spatial spread of infectious diseases: The global epidemic and mobility computational model}},
+year = {2010}
+}
+@article{Colizza2006,
+abstract = {The global spread of emergent diseases is inevitably entangled with the structure of the population flows among different geographical regions. The airline transportation network in particular shrinks the geographical space by reducing travel time between the world's most populated areas and defines the main channels along which emergent diseases will spread. In this paper, we investigate the role of the large-scale properties of the airline transportation network in determining the global propagation pattern of emerging diseases. We put forward a stochastic computational framework for the modeling of the global spreading of infectious diseases that takes advantage of the complete International Air Transport Association 2002 database complemented with census population data. The model is analyzed by using for the first time an information theory approach that allows the quantitative characterization of the heterogeneity level and the predictability of the spreading pattern in presence of stochastic fluctuations. In particular we are able to assess the reliability of numerical forecast with respect to the intrinsic stochastic nature of the disease transmission and travel flows. The epidemic pattern predictability is quantitatively determined and traced back to the occurrence of epidemic pathways defining a backbone of dominant connections for the disease spreading. The presented results provide a general computational framework for the analysis of containment policies and risk forecast of global epidemic outbreaks.},
+author = {Colizza, V. and Barrat, A. and Barth{\'{e}}lemy, M. and Vespignani, A.},
+doi = {10.1007/s11538-006-9077-9},
+isbn = {1153800690779},
+issn = {00928240},
+journal = {Bulletin of Mathematical Biology},
+keywords = {Complex networks,Epidemiology},
+pmid = {17086489},
+title = {{The modeling of global epidemics: Stochastic dynamics and predictability}},
+year = {2006}
+}
+@inproceedings{Draief2011,
+abstract = {We address the question of understanding the effect of the underlying network topology on the spread of a virus and the dissemination of information when users are mobile performing independent random walks on a graph. To this end, we propose a simple model of infection that enables to study the coincidence time of two random walkers on an arbitrary graph. By studying the coincidence time of a susceptible and an infected individual both moving in the graph we obtain estimates of the infection probability. The main result of this paper is to pinpoint the impact of the network topology on the infection probability. More precisely, we prove that for homogeneous graphs including regular graphs and the classical Erdős–R{\'{e}}nyi model, the coincidence time is inversely proportional to the number of nodes in the graph. We then study the model on power-law graphs, that exhibit heterogeneous connectivity patterns, and show the existence of a phase transition for the coincidence time depending on the parameter of the power-law of the degree distribution. We finally undertake a preliminary analysis for the case with k random walkers and provide upper bounds on the convergence time for both the complete graph and regular graphs.},
+author = {Draief, Moez and Ganesh, Ayalvadi},
+booktitle = {Discrete Event Dynamic Systems: Theory and Applications},
+doi = {10.1007/s10626-010-0092-5},
+file = {:C$\backslash$:/Users/Trent/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Draief, Ganesh - 2011 - A random walk model for infection on graphs Spread of epidemics {\&} rumours with mobile agents.pdf:pdf},
+isbn = {1062601000925},
+issn = {09246703},
+keywords = {Erdos-R{\'{e}}nyi graph,Infection time,Power-law graphs,Random walks on graphs,Regular graphs},
+title = {{A random walk model for infection on graphs: Spread of epidemics {\&} rumours with mobile agents}},
+year = {2011}
+}
+@article{Kelker1973,
+abstract = {An epidemic simulation is presented in which the population occupies a rectangular grid and individuals or germs move about the grid using a two-dimensional random walk. It is shown that the model can simulate the Providence measles data and also a distemper epidemic in ferrets.},
+author = {Kelker, Douglas},
+doi = {10.2307/2284506},
+issn = {01621459},
+journal = {Journal of the American Statistical Association},
+number = {344},
+pages = {821--823},
+publisher = {[American Statistical Association, Taylor {\&} Francis, Ltd.]},
+title = {{A Random Walk Epidemic Simulation}},
+url = {http://www.jstor.org/stable/2284506},
+volume = {68},
+year = {1973}
+}
+@techreport{Kogge,
+abstract = {Big Data as expressed as "Big Graphs" are growing in importance. Looking forward, there is also increasing interest in streaming versions of the associated analytics. This paper develops an initial template for the relationship between "traditional" batch graph problems, and streaming forms. Variations of streaming problems are discussed, along with their relationship to existing benchmarks. Also included is a discussion of classes of parallel architectures (including newly emerging ones) and how such kernels are liable to scale on them. Preliminary projections for some of these systems is presented.},
+author = {Kogge, Peter M},
+file = {:C$\backslash$:/Users/Trent/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Kogge - Unknown - Graph Analytics Complexity, Scalability, and Architectures.pdf:pdf},
+keywords = {emerging architectures,graph analytics,scalability,streaming analytics},
+title = {{Graph Analytics: Complexity, Scalability, and Architectures}}
+}
+@misc{Masuda2017,
+abstract = {Random walks are ubiquitous in the sciences, and they are interesting from both theoretical and practical perspectives. They are one of the most fundamental types of stochastic processes; can be used to model numerous phenomena, including diffusion, interactions, and opinions among humans and animals; and can be used to extract information about important entities or dense groups of entities in a network. Random walks have been studied for many decades on both regular lattices and (especially in the last couple of decades) on networks with a variety of structures. In the present article, we survey the theory and applications of random walks on networks, restricting ourselves to simple cases of single and non-adaptive random walkers. We distinguish three main types of random walks: discrete-time random walks, node-centric continuous-time random walks, and edge-centric continuous-time random walks. We first briefly survey random walks on a line, and then we consider random walks on various types of networks. We extensively discuss applications of random walks, including ranking of nodes (e.g., PageRank), community detection, respondent-driven sampling, and opinion models such as voter models.},
+archivePrefix = {arXiv},
+arxivId = {1612.03281},
+author = {Masuda, Naoki and Porter, Mason A. and Lambiotte, Renaud},
+booktitle = {Physics Reports},
+doi = {10.1016/j.physrep.2017.07.007},
+eprint = {1612.03281},
+file = {:C$\backslash$:/Users/Trent/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Masuda, Porter, Lambiotte - 2017 - Random walks and diffusion on networks.pdf:pdf},
+isbn = {9780128041536},
+issn = {03701573},
+keywords = {Diffusion,Markov chain,Network,Point process,Random walk},
+title = {{Random walks and diffusion on networks}},
+year = {2017}
+}
+@article{Salje2016,
+abstract = {The average spatial distance between transmission-linked cases is a fundamental property of infectious disease dispersal. However, the distance between a case and their infector is rarely measurable. Contact-tracing investigations are resource intensive or even impossible, particularly when only a subset of cases are detected. Here, we developed an approach that uses onset dates, the generation time distribution and location information to estimate the mean transmission distance. We tested our method using outbreak simulations. We then applied it to the 2001 foot-and-mouth outbreak in Cumbria, UK, and compared our results to contact-tracing activities. In simulations with a true mean distance of 106 m, the average mean distance estimated was 109 m when cases were fully observed (95{\%} range of 71–142). Estimates remained consistent with the true mean distance when only five percent of cases were observed, (average estimate of 128 m, 95{\%} range 87–165). Estimates were robust to spatial heterogeneity in the underlying population. We estimated that both the mean and the standard deviation of the transmission distance during the 2001 foot-and-mouth outbreak was 8.9 km (95{\%} CI: 8.4 km–9.7 km). Contact-tracing activities found similar values of 6.3 km (5.2km–7.4 km) and 11.2 km (9.5 km–12.8 km), respectively. We were also able to capture the drop in mean transmission distance over the course of the outbreak. Our approach is applicable across diseases, robust to under-reporting and can inform interventions and surveillance.},
+author = {Salje, Henrik and Cummings, Derek A.T. and Lessler, Justin},
+doi = {10.1016/j.epidem.2016.10.001},
+file = {:C$\backslash$:/Users/Trent/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Salje, Cummings, Lessler - 2016 - Estimating infectious disease transmission distances using the overall distribution of cases.pdf:pdf},
+isbn = {1878-0067 (Electronic)
+1878-0067 (Linking)},
+issn = {18780067},
+journal = {Epidemics},
+keywords = {Epidemiology,Foot-and-mouth disease,Infectious disease,Outbreaks,Transmission distance},
+pmid = {27744095},
+title = {{Estimating infectious disease transmission distances using the overall distribution of cases}},
+year = {2016}
+}
+
+@article{gregor2005parallel,
+  title={The parallel BGL: A generic library for distributed graph computations},
+  author={Gregor, Douglas and Lumsdaine, Andrew},
+  journal={Parallel Object-Oriented Scientific Computing (POOSC)},
+  volume={2},
+  pages={1--18},
+  year={2005},
+  publisher={Citeseer}
+}
