--- a/text-RW/related.tex
+++ b/text-RW/related.tex
@@ -2,4 +2,5 @@
 
 % This is space to add in discussion of \textbf{prior work} - word on the same problem or kernel that your paper assumes, and \textbf{related work} - work on the same application but using different approach or kernel, or a different but similar application..
 
-Forthcoming.
+% Prior work has focused primarily on the efficacy of the random walk methods, and not on parallelization of the algorithms. 
+
