--- a/text-RW/response.tex
+++ b/text-RW/response.tex
@@ -1,3 +1,8 @@
 \section{Response to Reviews}
 
 % This will be included only in the second and third iterations, and will be a summary of what you learned from the reviews you received from the prior pass, and how you modified the paper accordingly.
+
+From initial responses, I added within the introduction a bit about how the random walk kernel is used to help model epidemic disease spread and what the paper aims to do. I made some grammatical edits based on feedback, but given that I've written much more and I'm still in the drafting process I imagine there are many more grammatical changes that need to be made. I made a clarification with the table containing the potential datasets. I will still need to go through and make sure to better define terms such as order, size, and transmission potential. 
+I attempted to better explain how the kernel helps solve the problem by referencing a simple previous work by Kelker quite often since it is easily comprehensible. It seemed to go over well during the most recent presentation, so I imagine it should help here as well. 
+
+There are more recent works that I still need to work into the paper somehow as well.
