--- a/main.tex
+++ b/main.tex
@@ -13,23 +13,42 @@
 \usepackage{enumitem}
 
 \usepackage[table,xcdraw]{xcolor}
-\usepackage[ruled,vlined]{algorithm2e}
+% \usepackage[ruled,vlined]{algorithm2e}
 \usepackage{ragged2e}
 \usepackage{algorithm}
+% \usepackage{algorithm2e}
 
-\usepackage[noend]{algpseudocode}
+\usepackage{algpseudocode}
 
 \input{redirects.tex}
 
 \lstset{
     basicstyle=\small\ttfamily,
-    escapechar = \@,
-    frame=none,
-    %language=matlab,
-    showstringspaces=false,
+    %language=matlab,i
+    frame=tb,
+    tabsize=2, 
+    showstringspaces=false, % don't mark spaces in strings
+    numbers=left, % display line numbers on the left
+    commentstyle=\color{green}, % comment color
+    keywordstyle=\color{blue}, % keyword color
+    stringstyle=\color{red} % string color
     %framexleftmargin=0.25in,
     xleftmargin=0.25in,
     columns=flexible}
+
+\usepackage{color}
+\usepackage{tikz}
+
+% Tikz settings optimized for causal graphs.
+% Just copy-paste this part
+\usetikzlibrary{shapes,decorations,arrows,calc,arrows.meta,fit,positioning}
+\tikzset{
+    -Latex,auto,node distance =1 cm and 1 cm,semithick,
+    state/.style ={ellipse, draw, minimum width = 0.7 cm},
+    point/.style = {circle, draw, inner sep=0.04cm,fill,node contents={}},
+    bidirected/.style={Latex-Latex,dashed},
+    el/.style = {inner sep=2pt, align=left, sloped}
+}
 
 \usepackage{makeidx}
 \makeindex
